--- a/views/contactus.handlebars
+++ b/views/contactus.handlebars
@@ -3,7 +3,6 @@
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4"
     crossorigin="anonymous">
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-<link rel="stylesheet" type="text/css" href="/styles/contactcss.css">
 <script src="https://www.gstatic.com/firebasejs/5.3.1/firebase.js"></script>
 
 
@@ -11,61 +10,7 @@
 
     <div class="container">
 
-        <div class="row">
-            <div class="col-sm">
-
-
-                <nav class="navbar-expand-lg navbar-light ">
-
-                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown"
-                        aria-expanded="false" aria-label="Toggle navigation">
-                        <span class="navbar-toggler-icon"></span>
-                    </button>
-                    <div class="collapse navbar-collapse" id="navbarNavDropdown">
-                        <ul class="navbar-nav">
-                            <li class="nav-item active">
-                                <a class="nav-link" id="navHome" href="#">Home
-                                    <span class="sr-only">(current)</span>
-                                </a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="#">Contact Us</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="#">Add Yourself</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="#">Add Review</a>
-                            </li>
-                            <li class="nav-item dropdown">
-                                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true"
-                                    aria-expanded="false">
-                                    Categories
-                                </a>
-                                <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                                    <a class="dropdown-item" href="#">Plumbing</a>
-                                    <a class="dropdown-item" href="#">Flooring</a>
-                                    <a class="dropdown-item" href="#">Landscaping</a>
-                                    <a class="dropdown-item" href="#">Windows</a>
-                                    <a class="dropdown-item" href="#">Painting</a>
-                                    <a class="dropdown-item" href="#">Roofing</a>
-                                </div>
-                            </li>
-                        </ul>
-                        <h1 class="Name">
-                            <strong>
-                                <em>
-                                    <span class="L">L</span>
-                                    <span class="O">O</span>
-                                    <span class="D">D</span>
-                                    <span class="I">I</span>
-                                </em>
-                            </strong>
-                        </h1>
-                    </div>
-            </div>
-            </nav>
-        </div>
+        {{> navbar }}
         <form>
             <div class="form-group">
                 <label for="nameinput">
@@ -103,5 +48,3 @@
     <script type="text/javascript" src="/js/contact.js"></script>
 
 </body>
-
-</html>
