--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -12,12 +12,13 @@
     crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
     crossorigin="anonymous"></script>
-  <link rel="stylesheet" href="/styles/styles.css" media="screen" title="no title" charset="utf-8">
+  <link rel="stylesheet" href="/styles/{{css}}" charset="utf-8">
   <title>{{pagetitle}}</title>
 </head>
 
 <body>
   {{{body}}}
 </body>
+<script src="/js/{{js}}"></script>
 
 </html>
