--- a/views/roofing.handlebars
+++ b/views/roofing.handlebars
@@ -1,6 +1,6 @@
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
     crossorigin="anonymous">
-<link rel="stylesheet" href="/styles/roofing.css">
+
 <link rel="stylesheet" href="https://unpkg.com/leaflet@1.3.3/dist/leaflet.css" integrity="sha512-Rksm5RenBEKSKFjgI3a41vrjkw4EVPlJ3+OiI65vTjIdo9brlAacEuKOiQ5OFh7cOI1bkDwLqdLw3Zg0cRJAAQ=="
     crossorigin="" />
 <link href="https://fonts.googleapis.com/css?family=Chango" rel="stylesheet">
@@ -12,61 +12,7 @@
 
 <div class="container">
 
-    <div class="row">
-        <div class="col-sm">
-
-
-            <nav class="navbar-expand-lg navbar-light">
-
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown"
-                    aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarNavDropdown">
-                    <ul class="navbar-nav">
-                        <li class="nav-item active">
-                            <a class="nav-link" id="navHome" href="/">Home
-                                <span class="sr-only">(current)</span>
-                            </a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="/contactus">Contact Us</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="/addcontractor">Add Yourself</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="/reviews">Add Review</a>
-                        </li>
-                        <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true"
-                                aria-expanded="false">
-                                Categories
-                            </a>
-                            <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                                <a class="dropdown-item" href="/plumbing">Plumbing</a>
-                                <a class="dropdown-item" href="/flooring">Flooring</a>
-                                <a class="dropdown-item" href="/landscaping">Landscaping</a>
-                                <a class="dropdown-item" href="/windows">Windows</a>
-                                <a class="dropdown-item" href="/painting">Painting</a>
-                                <a class="dropdown-item" href="/roofing">Roofing</a>
-                            </div>
-                        </li>
-                    </ul>
-                    <h1 class="Name">
-                        <strong>
-                            <em>
-                                <span class="L">L</span>
-                                <span class="O">O</span>
-                                <span class="D">D</span>
-                                <span class="I">I</span>
-                            </em>
-                        </strong>
-                    </h1>
-                </div>
-        </div>
-        </nav>
-    </div>
+    {{> navbar }}
     <h1 class="WI">
         <span class="orangeL">R</span>
         <span class="greyL">o</span>
@@ -109,30 +55,4 @@
             </tbody>
         </table>
     </div>
-    <!-- Modal -->
-    <div class="modal fade" id="roofing-review-modal" role="dialog">
-        <div class="modal-dialog">
-
-            <!-- Modal content-->
-            <div class="modal-content">
-                <div class="modal-header" id="roofer-modal-header" style="margin-top: 30px">
-
-                    <h2 class="modal-title" id="roofer-modal-title" align="left">All Reviews for....</h2>
-                    <button type="button" class="close" data-dismiss="modal" aria-label="Close" style="float: right">
-                        <span aria-hidden="true">&times;</span>
-                    </button>
-                </div>
-                <div class="modal-body" id="roofer-review-body">
-                    {{!-- reviews are dynamically added to the modal --}}
-                    <div class="form-group" id="roofer-review-div">
-                    </div>
-
-                    <div class="modal-footer">
-                        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-
-    <script src="/js/roofing.js "></script>
+    {{> modal }}
