--- a/public/styles/contractor.css
+++ b/public/styles/contractor.css
@@ -1,3 +1,91 @@
 .errors {
     color: red
 }
+
+body {
+    background-image: url('/image/home.jpg');
+    background-size: 100%;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+}
+
+.row {
+    margin-left: 15%;
+}
+
+#navrow {
+    margin-left: 10%;
+}
+
+.navbar-expand-lg .dropdown-menu {
+    width: 50%;
+    margin-left: 75%;
+    background-color: orangered;
+    color: darkslategray;
+    font-family: 'Chango', cursive;
+    /* font-weight: bolder; */
+}
+
+.dropdown-menu {
+    background-color: darkslategray;
+    color: orangered;
+}
+
+.nav-item {
+    font-weight: normal;
+    font-family: 'Chango', cursive;
+}
+
+.Name {
+    font-family: 'Chango', cursive;
+    margin-left: 65px;
+    margin-top: -7px;
+    font-size: 29px;
+}
+
+#submit {
+    background-color: orangered;
+    color: darkslategray;
+    font-family: 'Chango', cursive;
+}
+
+.greyL {
+    color: darkslategray;
+}
+
+.orangeL {
+    color: orangered;
+}
+
+.L {
+    color: orangered;
+}
+
+.O {
+    color: darkslategray;
+}
+
+.D {
+    color: orangered;
+}
+
+.I {
+    color: darkslategray;
+}
+
+.container {
+    margin: 0%;
+    padding: 0%;
+}
+
+.WI {
+    font-size: 25px;
+    font-family: 'Chango', cursive;
+    margin-left: 27%;
+}
+
+label {
+    font-family: 'Chango', cursive;
+    font-size: 18px;
+    font-weight: bolder;
+}
