--- a/views/contactus.handlebars
+++ b/views/contactus.handlebars
@@ -1,4 +1,5 @@
 <link rel="stylesheet" href="css/reset.css">
+<link href="https://fonts.googleapis.com/css?family=Chango" rel="stylesheet">
 <link rel="icon" href="https://i.pinimg.com/564x/fe/8a/da/fe8ada4506e556737c4413a614b13033--bh-logo-buddhas-hand.jpg">
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4"
     crossorigin="anonymous">
@@ -6,7 +7,7 @@
 <script src="https://www.gstatic.com/firebasejs/5.3.1/firebase.js"></script>
 
 
-<body id="aboutUs">
+<body>
 
     <div class="container">
 
@@ -14,19 +15,19 @@
         <form>
             <div class="form-group">
                 <label for="nameinput">
-                    <strong>Name</strong>
+                    <strong class="orangeL">Name</strong>
                 </label>
                 <input type="text" class="form-control" id="name-input" placeholder="Your Name">
             </div>
             <div class="form-group">
                 <label for="exampleFormControlInput1">
-                    <strong>Email Address</strong>
+                    <strong class="greyL">Email Address</strong>
                 </label>
                 <input type="email" class="form-control" id="email-input" placeholder="name@example.com" title="Please provide only a Best Startup Ever corporate email address">
             </div>
             <div class="form-group">
                 <label for="exampleFormControlTextarea1">
-                    <strong>Comments:</strong>
+                    <strong class="orangeL">Comments:</strong>
                 </label>
                 <textarea class="form-control" id="text-input" rows="3" placeholder="Leave Us A Comment. "></textarea>
             </div>
