--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,6 +1,8 @@
 <head>
     <link rel="icon" href="https://i.pinimg.com/564x/fe/8a/da/fe8ada4506e556737c4413a614b13033--bh-logo-buddhas-hand.jpg">
     <link rel="stylesheet" href="reset.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
+        crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Chango" rel="stylesheet">
 
