--- a/views/partials/modal.handlebars
+++ b/views/partials/modal.handlebars
@@ -12,6 +12,7 @@
                 </button>
             </div>
             <div class="modal-body" id="review-body">
+                <div id="my_image"> </div>
                 {{!-- reviews are dynamically added to the modal --}}
                 <div class="form-group" id="review-div">
                 </div>
@@ -23,3 +24,30 @@
         </div>
     </div>
 </div>
+<style>
+    .modal-header {
+        border-radius: 5%;
+        background-color: orangered;
+        font-family: 'Chango', cursive;
+    }
+
+    .btn {
+        background-color: orangered;
+        color: darkslategray;
+        font-family: 'Chango', cursive;
+    }
+
+    .form-group {
+        border-radius: 5%;
+        background-color: orangered;
+        font-family: 'Chango', cursive;
+
+    }
+
+    .modal-content {
+        border-radius: 5%;
+        background-color: darkslategray;
+        font-family: 'Chango', cursive;
+
+    }
+</style>
